fix bugs on mobile

--- a/src/app/core/components/sidebar/sidebar.component.scss
+++ b/src/app/core/components/sidebar/sidebar.component.scss
@@ -42,7 +42,7 @@
 	position: fixed;
 	z-index: -1;
 	top: 0;
-	bottom: 0;
+	height: 100vh;
 	left: 0;
 	right: 0;
 	background-color: black;
@@ -74,8 +74,8 @@
 		position: fixed;
 		transition: left 0.3s, box-shadow 0.3s;
 		top: 0;
+		height: 100vh;
 		left: -17.5rem;
-		bottom: 0;
 		width: 17.5rem;
 
 		&--show {
