--- a/src/app/core/containers/app/app.component.scss
+++ b/src/app/core/containers/app/app.component.scss
@@ -12,3 +12,7 @@
 		}
 	}
 }
+
+.overflow-hidden {
+	overflow: hidden;
+}
